# warlock

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  warlock.docker.toml  warlock.toml
.github/workflows/: verify-module-docs.yml
docs/: module_summary_template.md  modules_needing_summaries.md
docs/modules/: indexing.md
src/: config.rs  lib.rs  main.rs
src/agents/: coder.rs  mod.rs  planner.rs  reflector.rs
src/embeddings/: cache.rs  embedder.rs  mod.rs
src/indexing/: chunker.rs  manifest.rs  mod.rs  parser.rs  walker.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src/orchestrator/: workflow.rs
src/patch/: apply.rs  mod.rs  revert.rs
src/retrieval/: mod.rs  vector_store.rs
src/sandbox/: docker.rs  local.rs  mod.rs
tests/: coder_tests.rs  indexing_tests.rs  integration_test.rs  planner_tests.rs
tests/fixtures/indexing/: generated.rs  sample.py  sample.rs  sample.ts
tools/: verify_module_docs.rs
