[package]
name = "warlock"
version = "0.1.0"
edition = "2021"
description = "Warlock autonomous AI coding agent"
license = "MIT"
repository = "https://github.com/example/warlock"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bollard = "0.18"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
git2 = { version = "0.20", default-features = false, features = ["https", "vendored-libgit2"] }
hex = "0.4"
ignore = "0.4"
dotenvy = "0.15"
qdrant-client = "=1.15.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sled = "0.34"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "process", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tree-sitter = "0.26.7"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.43"
pretty_assertions = "1.4"
predicates = "3.1"
serial_test = "3.2"
tempfile = "3.23"
